  - Win32: handle WM_IME_CHAR/WM_IME_COMPOSITION to support Unicode inputs on
    MBCS (non-Unicode) Windows. (#9099, #3653, #5961) [@ulhc, @ocornut, @Othereum]
- Examples:
   - Win32+DirectX12: ignore seemingly incorrect D3D12_MESSAGE_ID_FENCE_ZERO_WAIT
     warning on startups on some setups. (#9084, #9093) [@RT2Code, @LeoGautheron]

Docking+Viewports Branch:

- Fixed an assert in background dimming code, which could trigger after using
  gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
- Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
- Backends:
  - GLFW: dynamically load X11 functions to avoid -lx11 linking requirement introduced
    in 1.92.3. (#9116, #9109) [@ramenguy99]
  - SDL2, SDL3: adjust IME offset to match other backends and master branch. (#6071, #1953)
  - Win32: viewports created by backend forcefully direct messages to
    DefWindowProcW() in order to support Unicode text input. (#9099, #3653, #5961) [@ulhc]


-----------------------------------------------------------------------
 VERSION 1.92.5 (Released 2025-11-20)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.5

Breaking Changes:

 - Keys: commented out legacy names which were obsoleted in 1.89.0 (August 2022).
   - ImGuiKey_ModCtrl  --> ImGuiMod_Ctrl
   - ImGuiKey_ModShift --> ImGuiMod_Shift
   - ImGuiKey_ModAlt   --> ImGuiMod_Alt
   - ImGuiKey_ModSuper --> ImGuiMod_Super
 - IO: commented out legacy io.ClearInputCharacters() obsoleted in 1.89.8 (Aug 2023).
   Using io.ClearInputKeys() is enough.
 - BeginChild: commented out legacy names which were obsoleted in 1.90.0 (Nov 2023),
   1.90.9 (July 2024), 1.91.1 (August 2024). (#462, #7687)
   - ImGuiChildFlags_Border                  --> ImGuiChildFlags_Borders
   - ImGuiWindowFlags_NavFlattened           --> ImGuiChildFlags_NavFlattened (moved to ImGuiChildFlags).