@@ -210,9 +210,13 @@ Other Changes:
 
 Docking+Viewports Branch:
 
-- Fixed an assert in background dimming code, which could trigger after using
-  gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
 - Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
+- Viewports:
+  - Fixed a regression in 1.92.4 which could cause combos/popups window from
+    appearing under their parent viewport if their geometry overlapped the main
+    viewport. (#8948, #9172, #9131, #9128)
+  - Fixed an assert in background dimming code, which could trigger after using
+    gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
 - Backends:
   - GLFW: dynamically load X11 functions to avoid -lx11 linking requirement introduced
     in 1.92.3. (#9116, #9109) [@ramenguy99]
